[gd_scene load_steps=12 format=3 uid="uid://bu428plfcgs2f"]

[ext_resource type="Texture2D" uid="uid://bmon2bq03pdt4" path="res://Texture/Diario.png" id="1_0etr3"]
[ext_resource type="Script" path="res://Scripts/Diary.gd" id="1_4lx5f"]
[ext_resource type="Script" path="res://Scripts/Pages.gd" id="3_4alfo"]
[ext_resource type="Script" path="res://Scripts/Papers.gd" id="4_atrii"]
[ext_resource type="Texture2D" uid="uid://dtn5qjgbyue27" path="res://Texture/Paper_for_diary.png" id="5_pjl4s"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vvfae"]
bg_color = Color(0.45098, 0.305882, 0.0980392, 0.913725)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_smw7o"]
bg_color = Color(0.211765, 0.133333, 0.027451, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xuev1"]
bg_color = Color(0.45098, 0.305882, 0.0980392, 0.913725)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mt6ba"]
bg_color = Color(0.211765, 0.133333, 0.027451, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3wg86"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_j8b0a"]

[node name="Diary" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4lx5f")

[node name="Diary" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -250.0
offset_right = 400.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_0etr3")
expand_mode = 3

[node name="papers_button" type="Button" parent="Diary"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -33.0
offset_top = 14.0
offset_right = 15.0
offset_bottom = 46.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_vvfae")
theme_override_styles/hover = SubResource("StyleBoxFlat_smw7o")
text = "Papéis
"

[node name="diary_button" type="Button" parent="Diary"]
layout_mode = 0
offset_left = 767.0
offset_top = 48.0
offset_right = 815.0
offset_bottom = 80.0
theme_override_font_sizes/font_size = 12
theme_override_styles/normal = SubResource("StyleBoxFlat_xuev1")
theme_override_styles/hover = SubResource("StyleBoxFlat_mt6ba")
text = "Diário
"

[node name="previous_button" type="Button" parent="Diary"]
layout_mode = 0
offset_left = 25.0
offset_top = 405.0
offset_right = 60.0
offset_bottom = 440.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_3wg86")
theme_override_styles/hover = SubResource("StyleBoxEmpty_3wg86")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_3wg86")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_3wg86")
theme_override_styles/focus = SubResource("StyleBoxEmpty_3wg86")
text = "<
"

[node name="next_button" type="Button" parent="Diary"]
layout_mode = 0
offset_left = 745.0
offset_top = 405.0
offset_right = 780.0
offset_bottom = 440.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
theme_override_styles/normal = SubResource("StyleBoxEmpty_j8b0a")
theme_override_styles/hover = SubResource("StyleBoxEmpty_j8b0a")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_j8b0a")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_j8b0a")
theme_override_styles/focus = SubResource("StyleBoxEmpty_j8b0a")
text = ">"

[node name="Pages" type="Control" parent="Diary"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 29.0
offset_top = 8.0
offset_right = -35.0
offset_bottom = -87.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_4alfo")

[node name="page_left" type="Label" parent="Diary/Pages"]
layout_mode = 2
offset_left = 10.0
offset_top = 20.0
offset_right = 355.0
offset_bottom = 405.0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "	   Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce a dui molestie, tincidunt orci in, imperdiet ex. Mauris facilisis nulla vel dolor vulputate dapibus. Vivamus ac diam condimentum, vulputate est non, pretium eros. Quisque accumsan tempus massa vel pharetra. Cras velit metus, tristique sodales urna sit amet, fringilla imperdiet dui. Pellentesque ut rutrum sapien. Cras condimentum justo a risus dictum, ac feugiat arcu consectetur. Quisque pretium iaculis diam, ut consectetur tortor scelerisque a. Aenean elementum ornare mi, quis rhoncus leo fringilla aliquet. Etiam elementum diam pulvinar ex gravida viverra. Proin in rutrum ex.

    Integer eget consequat tellus, et ullamcorper sapien. Ut molestie nec orci id imperdiet. Aenean ut volutpat est. In sagittis luctus facilisis. Fusce sem neque, bibendum semper tristique eu, finibus vitae nisl. Aliquam id orci sed quam pharetra vehicula venenatis id mauris. Vestibulum pulvinar malesuada leo. Vestibulum viverra massa vitae dapibus placerat. Aliquam cursus risus non libero feugiat, at lobortis risus commodo. Fusce rutrum diam non ligula elementum sollicitudin. Nam at massa at mi venenatis finibus sit amet non eros. Curabitur in scelerisque elit. Donec luctus, nibh eget lobortis ultricies, arcu justo condimentum eros, et suscipit quam lectus dictum augue."
autowrap_mode = 2

[node name="page_right" type="Label" parent="Diary/Pages"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -351.0
offset_top = -182.5
offset_right = -6.0
offset_bottom = 202.5
grow_horizontal = 0
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 10
text = "Mauris at mattis lacus, vitae consequat risus. Vivamus aliquet libero vitae posuere vestibulum. Nulla sodales in ante quis faucibus. Phasellus sagittis luctus nibh. Phasellus vel ligula erat. Proin fringilla vestibulum odio sit amet convallis. Vestibulum accumsan sapien luctus tincidunt laoreet. Pellentesque fermentum, nunc ut gravida commodo, libero lectus mollis dui, sit amet molestie tellus libero et ante. Sed imperdiet nulla non consectetur interdum.

Ut varius iaculis feugiat. Nam gravida imperdiet luctus. Pellentesque euismod dictum ex id molestie. Ut lacinia hendrerit est non tincidunt. Aenean urna massa, volutpat non neque sit amet, accumsan finibus nibh. Maecenas rutrum risus sit amet convallis vulputate. Morbi tincidunt leo ut maximus dignissim. Nulla iaculis ac massa sit amet sagittis. Morbi ultricies ut orci mattis iaculis. Suspendisse potenti. Duis mollis leo eget ex fringilla, sit amet pellentesque augue fringilla. Morbi eleifend enim velit, bibendum ultrices erat imperdiet vel."
autowrap_mode = 2

[node name="Papers" type="Control" parent="Diary"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = 11.0
offset_right = -55.0
offset_bottom = -60.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_atrii")

[node name="paper_left" type="TextureRect" parent="Diary/Papers"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -11.0
offset_top = -230.5
offset_right = 314.0
offset_bottom = 234.5
grow_vertical = 2
rotation = -0.0349066
texture = ExtResource("5_pjl4s")

[node name="paper_left_label" type="Label" parent="Diary/Papers/paper_left"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 28.0
offset_top = 31.0
offset_right = -21.0
offset_bottom = -23.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "Não sei quem vai encontrar isso, mas preciso escrever. Talvez assim as coisas fiquem mais claras pra mim também. 
Me mudei pra essa casa há algumas semanas. Sempre quis um lugar afastado, tranquilo, onde pudesse relaxar. Mas parece que não foi uma boa ideia.
Sinto que estou sendo observada o tempo todo. Não sei explicar, mas é como se alguém ou algo estivesse me vigiando. 
A cidade não gosta de falar sobre essas coisas. Parece que todo mundo sabe, mas ninguém quer comentar. Fico com a sensação de que há algo sinistro escondido por aqui.
Se você encontrou este relato, fique atento. Confie no seu instinto.

"
vertical_alignment = 1
autowrap_mode = 2

[node name="paper_right" type="TextureRect" parent="Diary/Papers"]
layout_mode = 0
offset_left = 374.0
offset_top = -29.0
offset_right = 699.0
offset_bottom = 436.0
rotation = 0.0349066
texture = ExtResource("5_pjl4s")
flip_h = true
flip_v = true

[node name="paper_right_label" type="Label" parent="Diary/Papers/paper_right"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 26.0
offset_top = 23.0
offset_right = -24.0
offset_bottom = -28.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 13
text = "Paper 2"
vertical_alignment = 1
autowrap_mode = 2

[connection signal="pressed" from="Diary/papers_button" to="." method="_on_papers_button_pressed"]
[connection signal="pressed" from="Diary/diary_button" to="." method="_on_diary_button_pressed"]
[connection signal="pressed" from="Diary/previous_button" to="." method="_on_previous_button_pressed"]
[connection signal="pressed" from="Diary/next_button" to="." method="_on_next_button_pressed"]
